examples/test/testpolicy8619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8619
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key13: value1
      key22: value25
      key7: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value33
          key0: value30
          key20: value17
      podSelector:
        matchLabels:
          key37: value13
          key30: value15
          key43: value2
